--- a/lesson5/package.json
+++ b/lesson5/package.json
@@ -9,6 +9,8 @@
   "author": "alsotang <alsotang@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "cheerio": "^1.0.0-rc.3",
+    "superagent": "^5.1.0"
   }
 }
